--- a/src/app/todo/todo-list/todo-list.html
+++ b/src/app/todo/todo-list/todo-list.html
@@ -2,7 +2,9 @@
   <div class="flex flex-col gap-2 p-4 bg-purple-500 text-white">
     <h1 class="text-2xl font-bold text-center">Todo List</h1>
   </div>
-  <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-5 max-w-7xl mx-auto">
+  <div
+    class="todo-list grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4 gap-4 mb-5 max-w-7xl mx-auto"
+  >
     @for (todo of todos(); track todo.id) {
     <a
       class="flex flex-col gap-2 p-4 bg-purple-500 text-white hover:bg-purple-600 transition-all duration-300 cursor-pointer rounded-md"
